--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_height="fill_parent"
             android:contentDescription="@string/save"
             android:onClick="onSaveClicked"
-            android:src="@drawable/save" />
+            android:src="@drawable/rsz_home" />
 
 
     </LinearLayout>
@@ -53,7 +53,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="Telnet Connection" />
+        android:text="Send All" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Plotter app developed by Bernhardt and Fabio"
+        android:id="@+id/textView"
+        android:textColor="#ffffff"
+        android:typeface="serif" />
+
+    <Button
+        android:id="@+id/pressButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:layout_gravity="right" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -89,14 +105,15 @@
         android:layout_height="38dp"
         android:layout_gravity="center_horizontal"
         android:autoText="false"
-        android:hint="Ip Server" />
+        android:hint="Ip Server"
+        android:textColor="#f7f7f7" />
 
     <EditText
         android:id="@+id/portServer"
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:layout_gravity="center_horizontal"
-        android:hint="Port Server" />
+        android:hint="Port Server"
+        android:textColor="#ffffff" />
 
 
 </LinearLayout>
